# project_initiation

./: README.md  project_roadmap.json  project_scope.json  project_scope_vdb.json  pyproject.toml  report.md  test_crew_rag.py  test_crewai.py  test_rag_only.py  test_rag_pipeline.py  test_simple_crew.py
db/: chroma.sqlite3
knowledge/: Meeting_notes.docx.md  Phase1_Research_&_Analysis_Report_SmartAssist-document.docx  Project_Brief_SmartAssist_Internal_LLM_Solution_document.docx  Project_brief.md  SmartAssist_Mtg_Notes_May1.docx  TechNova_x_AI_Solutions_SmartAssist_PreKickoff_Call_Transcript.docx  prekickoff_transcript.md  research_analysis.md
src/project_initiation/: create_vectore_database.py  crew.py  main.py  output.py
src/project_initiation/config/: agents.yaml  tasks.yaml
src/project_initiation/tools/: custom_tool.py
src/project_initiation/utils/: rag_utils.py  task_context_provider.py
tests/: test_crew_rag.py  test_rag_only.py  test_simple_crew.py
utils/: run_crew_directly.py
