[project]
name = "project_initiation"
version = "0.1.0"
description = "project-initiation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.117.0,<1.0.0",
    "langchain-anthropic>=0.3.13",
]

[project.scripts]
project_initiation = "project_initiation.main:run"
run_crew = "project_initiation.main:run"
train = "project_initiation.main:train"
replay = "project_initiation.main:replay"
test = "project_initiation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
